--- a/templates/base.html
+++ b/templates/base.html
@@ -26,7 +26,10 @@
                     </li>
                     {% endif %}
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'logout' %}">로그아웃</a>
+                        <form method="post" action="{% url 'logout' %}" style="display:inline;">
+                            {% csrf_token %}
+                            <button type="submit" class="nav-link" style="border: none; background: none; cursor: pointer;">로그아웃</button>
+                        </form>
                     </li>
                     {% else %}
                     <li class="nav-item">
